--- a/README
+++ b/README
@@ -18,9 +18,23 @@ very flexible so there are no hardcoded column or table names.  I plan
 to implement MySQL, Oracle, and PostgreSQL subclasses (probably in
 that order).
 
-- test.pl (coming with the next verison, I swear).
+- test.pl
 
 - Locking in Thesaurus::DBM.
+
+
+History
+
+0.02 - Fixed a bug in Thesaurus::DBM.  Apparently, MLDBM doesn't store
+references, just data.  I did some strange things in Thesaurus::DBM to
+ensure that the object preserves data integrity correctly.  The upside
+is that this module now works as it should (I think).  The downside is
+that it will get exponentially slower as more data is added.  That
+means that Thesaurus::File is potentially faster for large structures.
+OTOH, Thesaurus::DBM keeps all changes on disk as you go.  I'll try to
+tune Thesaurus::DBM as much as possible.
+
+0.01 - Initial release
 
 
 Copyright (c) 1999 David Rolsky. All rights reserved. This program is
