Import of PGRIMES/Thesaurus-0.11 from CPAN.
gitpan-cpan-distribution: Thesaurus
gitpan-cpan-version:      0.11
gitpan-cpan-path:         PGRIMES/Thesaurus-0.11.tar.gz
gitpan-cpan-author:       PGRIMES
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -26,6 +26,13 @@ that order).
 
 History
 
+0.11
+
+- Made the locking defaults do what the docs say they do.
+
+- Added death if someone wants to use NDBM_File cause it doesn't have
+EXISTS either.
+
 0.1
 
 - Added locking for Thesaurus::DBM.
