Import of DROLSKY/Thesaurus-0.15 from CPAN.
gitpan-cpan-distribution: Thesaurus
gitpan-cpan-version:      0.15
gitpan-cpan-path:         DROLSKY/Thesaurus-0.15.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -26,6 +26,11 @@ that order).
 
 History
 
+0.15
+
+- Moved subclasses into Thesaurus subdirectory so man pages are
+created correctly during install.
+
 0.12
 
 - (Hopefully) made the test suite smarter.  It checks to see if you
