--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.21  October 3, 2002
+
+- Make installation easier for people withou
+
 0.20  August 26, 2002 (from Taiwan)
 
 (several years later)
