--- a/Changes
+++ b/Changes
@@ -1,8 +1,22 @@
-0.21  October 3, 2002
+0.22  2007-03-30
 
-- Make installation easier for people withou
+- Fixed broken example code in the SYNOPSIS.
 
-0.20  August 26, 2002 (from Taiwan)
+- Add some pod tests and improve pod coverage.
+
+- Sign distro
+
+- Add passthrough Makefile.PL
+
+- Shut up warnings from File::Temp in tests.
+
+
+0.21  2002-10-03
+
+- Make installation easier for people without Module::Build.
+
+
+0.20  2002-08-26 (from Taiwan)
 
 (several years later)
 
@@ -12,7 +26,7 @@ This release does break a fair chunk of the old interface, but I think
 that's for the best.
 
 - Remove Thesaurus::DBI (which never did anything anyway, it was just
-placeholder code that never got written).
+  placeholder code that never got written).
 
 - Remove Thesaurus::DBM in favor of new Thesaurus::BerkeleyDB module.
 
@@ -21,7 +35,3 @@ placeholder code that never got written).
 - Rewrite internals quite a bit.
 
 - Change "dump" method to "all".
-
-0.15  February 15, 2000
-
-- initial release
