--- a/README
+++ b/README
@@ -1,85 +1,98 @@
-This is the Thesaurus module and its subclasses.
+NAME
+    Thesaurus - Maintains lists of associated items
 
-Thesaurus is a module that implements the notion of equivalence
-between things (anything that fits in a scalar).
+SYNOPSIS
+     use Thesaurus;
 
-All the basic functionality for Thesaurus, Thesaurus::File, and
-Thesaurus::DBM is in place.  Thesaurus::DBI is currently an empty
-module with some docs.
+     my $th = Thesaurus->new( -files => [ 'file1', 'file2' ],
+                              -ignore_case => 1 );
 
+     @words = $th->find('vegan');
 
-Required Modules
+     %words = $th->find( 'Faye' );
 
- Thesaurus::File: Text_CSV_XS, IO::File
- Thesaurus::DBM: File::Flock, MLDBM, DB_File or GDBM_File
+     foreach $word ( @{ $words{Faye} } )
+     {
+         #something ...
+     }
 
+     $th->add_file( 'file1', 'file2' );
 
-To Do
+     $th->add( [ 'tofu', 'mock duck' ] );
 
-- Thesaurus::DBI.  This means making Thesaurus::DBI::<your DB system
-here> subclasses as well as a configuration script to help people set
-up the tables they'll need to implement this.  My goal is to make this
-very flexible so there are no hardcoded column or table names.  I plan
-to implement MySQL, Oracle, and PostgreSQL subclasses (probably in
-that order).
+     $th->delete( 'meat', 'vivisection' );
 
+DESCRIPTION
+    Thesaurus is a module that allows you to create lists of related things.
+    It was created in order to facilitate searches of a database of Chinese
+    names in Anglicized form. Because there are various schemes to create
+    phonetic representations of Chinese words, the following can all
+    represent the same Chinese character:
 
-History
+     Woo
+     Wu
+     Ng
 
-0.15
+    Thesaurus can be used for anything that fits into a scalar by using the
+    "new" method with no parameters and then calling the "add" method to add
+    data.
 
-- Moved subclasses into Thesaurus subdirectory so man pages are
-created correctly during install.
+    Thesaurus also acts as the parent class to several child classes which
+    implement various forms of persistence for the data structure. This
+    module can be used on its own to instantiate an object that lives for
+    the life of its scope.
 
-0.12
+METHODS
+    * new( %params )
+        The "new" method returns a Thesaurus object. It takes the following
+        parameters:
 
-- (Hopefully) made the test suite smarter.  It checks to see if you
-have the needed modules for a given subclass before attempting to
-test it.  This doesn't affect the install (it'll still install all
-of them).
+        * ignore_case => $boolean
+                If this parameter is true, then the object will be case
+                insensitive. It is _always_ case-preservative for its data.
 
-- I'm also moving this from my PGRIMES account on CPAN (not my name)
-to my DROLSKY account.  No, I'm not paranoid.
+    * find( @items )
+         @words = $th->find( 'Big Hat' );
+         %words = $th->find( 'Big Hat', 'Faye Wong' );
 
-0.11
+        The "find" method returns either a list or a hash, depending on
+        context. Given a single word to find, it returns the list of words
+        that it is associated with, including the word that was given. If no
+        matches are found then it returns an empty list.
 
-- Made the locking defaults do what the docs say they do.
+        If it is given multiple words, it returns a hash. The keys of the
+        has are the words given, and the keys are list references containing
+        the associated words. If no words were found then the key has a
+        value of 0. If none of the words match then an empty list is
+        returned.
 
-- Added death if someone wants to use NDBM_File cause it doesn't have
-EXISTS either.
+    * add( \@list1, \@list2 )
+        The "add" method takes a list of list references. Each of these
+        references should contain a set of associated scalars. Like the
+        "add_files()" method, if an entry in a list matches an entry already
+        in the object, then it is appended to the existing list, otherwise a
+        new association is created.
 
-0.1
+    * delete( @items )
+        The "delete" method takes a list of items to delete. All the
+        associations for the given items will be removed.
 
-- Added locking for Thesaurus::DBM.
+    * all
+        Returns a list of array references. Each one of these list
+        references contains one set of associations. Each association list
+        is returned once, not once per item it contains.
 
-- Thesaurus::DBM dies if you don't give it some sort of use argument
-besides SDBM_File.
+AUTHOR
+    Dave Rolsky, <autarch@urth.org>
 
-- Really fixed the bug that was sort of fixed in 0.02.  The previous
-solution worked but was slow, slow, slow.  The new fix is only slow so
-that's an improvement.
+COPYRIGHT
+    Copyright (c) 1999-2003 David Rolsky. All rights reserved. This program
+    is free software; you can redistribute it and/or modify it under the
+    same terms as Perl itself.
 
-- Added test.pl test suite.  This does a reasonably good job of
-exercising the code.  This makes it much easier to move forward with
-new versions.  If someone has a more elegant method of testing the
-locking please let me know.
+    The full text of the license can be found in the LICENSE file included
+    with this module.
 
-0.02
+SEE ALSO
+    Thesaurus::CSV, Thesaurus::BerkeleyDB
 
-- Fixed a bug in Thesaurus::DBM.  Apparently, MLDBM doesn't store
-references, just data.  I did some strange things in Thesaurus::DBM to
-ensure that the object preserves data integrity correctly.  The upside
-is that this module now works as it should (I think).  The downside is
-that it will get exponentially slower as more data is added.  That
-means that Thesaurus::File is potentially faster for large structures.
-OTOH, Thesaurus::DBM keeps all changes on disk as you go.  I'll try to
-tune Thesaurus::DBM as much as possible.
-
-0.01
-
- - Initial release
-
-
-Copyright (c) 1999 David Rolsky. All rights reserved. This program is
-free software; you can redistribute it and/or modify it under the same
-terms as Perl itself.
