--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.23  2007-03-31
+
+- Fixed tests to not fail if optional modules were not installed.
+
+
 0.22  2007-03-30
 
 - Fixed broken example code in the SYNOPSIS.
